[package]
name = "i2c-multiplexer"
description = "An I2C Multiplexer library that supports the PCA9546 and TCA9546A chips"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/FloppyDisck/i2c-multiplexer"
readme = "README.md"
keywords = ["embedded", "multiplexer", "PCA9546", "TCA9546A"]
categories = ["embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bus = []

[dependencies]
embedded-svc = "0.28.0"
embedded-hal = "1.0.0"

crc = "3.0.0"
thiserror = "1.0.38"

[dev-dependencies]
shared-bus = { version= "0.3.1", features=['std'] }
embedded-hal-mock = "0.11.1"
rstest = "0.21.0"
