[package]
name = "i2c-multiplexer"
description = "An I2C Multiplexer library that supports the PCA9546 and TCA9546A chips"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/FloppyDisck/i2c-multiplexer"
readme = "README.md"
keywords = ["embedded", "multiplexer", "PCA9546", "TCA9546A"]
categories = ["embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bus = []

[dependencies]
embedded-hal = "1.0.0"
thiserror = { version = "2.0.3", default-features = false }

[dev-dependencies]
embedded-hal-bus = { version = "0.2.0", features = ["std"] }
embedded-hal-mock = "0.11.1"
rstest = "0.16.0"
